<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AgileProject</string>
    <string name="data_source">Data Source</string>
    <string name="live_data">Live Data</string>
    <string name="mock_data">Mock Data</string>
    <string name="is_using_mock_data">Use Mock Data?</string>
    <string name="settings_menu">Settings</string>
    <string name="is_using_mock_data_summary">Switch to mock data for testing purposes.</string>
    <string name="is_using_broken_data_summary">Switch to broken data for testing purposes.</string>
    <string name="is_using_broken_data">Use Broken Data?</string>
    <string name="google_finance">http://finance.google.com/finance/info?client=ig&amp;infotype=infoquoteall&amp;q=LON:</string>
    <string name="name">Name</string>
    <string name="Shares">Shares</string>
    <string name="Value">Value</string>
    <string name="Total">Total</string>
    <string name="warningMessage">One or more of your shares are currently unavailable from the market server</string>
	
	<string name="editRUNCONSTTitle">Adjust Run-constant value</string>
	<string name="editRUNCONSTDescr">Send RUN warning if values change by % \nplease ensure that value is greater than 0 and less than 100</string>
	      
	
	<string name="editROCKET_CONSTTitle">Adjust Rocket alarm value</string>
	<string name="editROCKET_CONSTDescr">Send Rocket warning if stock values rises by % \nplease ensure that value is greater than 0 and less than 100</string>
	      
	
	<string name="editPLUMMET_CONSTTitle">Adjust Plummet warning value</string>
	<string name="editPLUMMET_CONSTDescr">Send warning if stock plumments by % \nplease ensure that value is greater than 0 and less than 100</string>
    <string name="google_finance_url"><![CDATA[http://finance.google.com/finance/info?client=ig&infotype=infoquoteall&q=LON:]]></string>
    <string name="input_stream_char_mode">UTF-8</string>
    <string name="last_value_json_tag">l</string>
    <string name="name_value_json_tag">t</string>
    <string name="market_value_json_tag">e</string>
    <string name="instant_volume_value_json_tag">vo</string>
    <string name="yahoo_finance_url">http://ichart.finance.yahoo.com/table.csv?s=</string>
    <string name="test_data_url">http://beberry.lv/stocks/</string>


</resources>
